# open-knowledge-framework

./: .gitignore  LICENSE  README.md  START.md  入口.md  知识体系使用指南.md
.github/workflows/: branch-guard.yml  sync-check.yml
.well-known/: agent.json
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  index.html
scripts/: act.sh  archive.sh  auto-collab-loop.sh  auto-collab.sh  commit-diagnose-v2.py  config-env.sh  config-env.sh.bak  dir-lock.sh  edit-lock.sh  git-safe-pull-wrapper.sh  handover.sh  init.sh  patrol.sh  push.sh  push.sh.bak  quick-start.sh  rebuild-index.sh  safe-edit.sh  safe-pull.sh  setup-hooks.sh  ssh-init.sh  sync-paths.conf.example  sync-public.sh  sync-settings.sh  sync-upstream.sh  sync.sh
scripts/backup_sender/: backup_sender.py
scripts/file_cleaner/: cleaner.py  config.json
scripts/hooks/: post-commit-sync.sh
templates/: OPT-TRACK.template.md  RULES.template.md
templates/templates/: INDEX.template.md  SOUL.template.md  TOOLS.template.md  USER.template.md  adr-template.md  dr-template.md  hot-rules.template.md
交接台/: README.md
交接台/工单/: WO-088-工单交付证据档案化.md
共享知识/: BUG-20260518-体系结构自检缺陷.md  GitHub下载加速.md  README.md  knowledge-registry.md  主人档案.md  体系测试记录.md  蓝图.md  角色边界总览.md
共享知识/CI模式库/: cpp-juce-ci.md  python-ci.md  rust-ci.md
共享知识/knowledge/: 2026-W18.md  2026-W19.md  三项目并行开发经验-20260510.md
共享知识/产品设计/: 知识舱-产品设计文档.md
基础设定/: EMAIL_RULES-TEMPLATE.md  MEMORY-TEMPLATE.md  SOUL-TEMPLATE.md  TOOLS.md  USER-TEMPLATE.md
技能/: INDEX.md  README.md  索引.md
角色/: INDEX.md
项目/: INDEX.md
项目/open-dev-tools/open-storage/: Cargo.toml
(+291 files in other folders)
