[package]
name = "open-storage"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared storage abstraction layer — StorageBackend trait, StorageRouter, and error types"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
